[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/ExportImage.gd" type="Script" id=1]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="ExportImage" type="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
popup_exclusive = true
window_title = "Export Image"
resizable = true
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
usage = 0
render_target_v_flip = true

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="TextureRect" type="TextureRect" parent="HSplitContainer"]
margin_right = 793.0
margin_bottom = 536.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 805.0
margin_right = 1008.0
margin_bottom = 536.0

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_right = 203.0
margin_bottom = 14.0
text = "Width:"

[node name="WidthSpinBox" type="SpinBox" parent="HSplitContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 203.0
margin_bottom = 42.0
min_value = 2.0
max_value = 16384.0
value = 1024.0

[node name="Label2" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 203.0
margin_bottom = 60.0
text = "Height:"

[node name="HeightSpinBox" type="SpinBox" parent="HSplitContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 203.0
margin_bottom = 88.0
min_value = 2.0
max_value = 16384.0
value = 600.0

[node name="Label3" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 203.0
margin_bottom = 106.0
text = "Format:"

[node name="FormatOptionButton" type="OptionButton" parent="HSplitContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 203.0
margin_bottom = 130.0
text = "png"
items = [ "png", null, false, 0, null, "exr", null, false, 1, null ]
selected = 0

[node name="Label4" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 203.0
margin_bottom = 148.0
text = "Path:"

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 203.0
margin_bottom = 176.0

[node name="FilePathLineEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="FilePathButton" type="ToolButton" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 203.0
margin_bottom = 24.0
text = "Open..."

[node name="Label5" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 203.0
margin_bottom = 245.0
text = "
Waiting for the image to show...
Please be patient.
"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 544.0
popup_exclusive = true
window_title = "保存文件"
access = 2
filters = PoolStringArray( "*.png", "*.exr" )
current_dir = "/"
current_file = "export.png"
current_path = "/export.png"

[connection signal="confirmed" from="." to="." method="_on_ExportImage_confirmed"]
[connection signal="value_changed" from="HSplitContainer/VBoxContainer/WidthSpinBox" to="." method="_on_WidthSpinBox_value_changed"]
[connection signal="value_changed" from="HSplitContainer/VBoxContainer/HeightSpinBox" to="." method="_on_HeightSpinBox_value_changed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/HBoxContainer/FilePathButton" to="." method="_on_FilePathButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
